[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/UI/UIQuest.gd" type="Script" id=1]

[node name="Quest" type="MarginContainer"]
margin_right = 958.0
margin_bottom = 1026.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 918.0
margin_bottom = 986.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="QuestTab" type="TabContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 871.0
margin_bottom = 939.0
tab_align = 0
tabs_visible = false

[node name="Vbox" type="VBoxContainer" parent="PanelContainer/QuestTab"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/QuestTab/Vbox"]
margin_right = 856.0
margin_bottom = 54.0
custom_constants/margin_right = 10
custom_constants/margin_top = 5
custom_constants/margin_left = 30
custom_constants/margin_bottom = 5

[node name="Label" type="Label" parent="PanelContainer/QuestTab/Vbox/MarginContainer"]
margin_left = 30.0
margin_top = 5.0
margin_right = 846.0
margin_bottom = 49.0
text = "Journal"

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/QuestTab/Vbox"]
margin_top = 58.0
margin_right = 856.0
margin_bottom = 920.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="QuestList" type="ItemList" parent="PanelContainer/QuestTab/Vbox/MarginContainer3"]
margin_left = 10.0
margin_top = 10.0
margin_right = 846.0
margin_bottom = 852.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="quest_info" type="MarginContainer" parent="PanelContainer/QuestTab"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/QuestTab/quest_info"]
margin_left = 10.0
margin_top = 10.0
margin_right = 91.0
margin_bottom = 64.0

[node name="Button" type="Button" parent="PanelContainer/QuestTab/quest_info/VBoxContainer"]
margin_right = 81.0
margin_bottom = 50.0
text = "Back"

[node name="Description" type="RichTextLabel" parent="PanelContainer/QuestTab/quest_info/VBoxContainer"]
margin_top = 54.0
margin_right = 81.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Test"

[connection signal="item_activated" from="PanelContainer/QuestTab/Vbox/MarginContainer3/QuestList" to="." method="_on_QuestList_item_activated"]
[connection signal="pressed" from="PanelContainer/QuestTab/quest_info/VBoxContainer/Button" to="." method="_on_Button_pressed"]
